src/main/java/com/example/management_system/controller/errors/UserNotFoundException.java
package com.example.management_system.controller.errors;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }

}